--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ url: "https://NAME0x0.github.io"
 
 # Build settings
 markdown: kramdown
-permalink: /:title/
+permalink: /:year/:month/:day/:title/
 show_excerpts: true
